--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js --exec babel-node",
+    "start": "node index.js",
+    "dev": "nodemon index.js --exec babel-node",
     "build": "babel src --out-dir build"
   },
   "author": "Democracia en Red",
