--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.21.0",
