--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,16 @@
 version: '3'
-
 services:
   mongo:
-    image: mongo:3.6
+    image: mongo:3.6.23
     ports:
       - 27017:27017
     volumes:
       - ./tmp/db:/data/db  
 
   api:
-    build: .
-    image: ghcr.io/democraciaenred/demoreset-api:latest
-    # volumes: 
-    #   - .:/usr/src/app
-    env_file: .env
+    image: demoreset-api:latest
+    env_file:
+      - .env
     ports:
       - "4000:4000"
     depends_on:
