--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "node build/index.js",
     "dev": "nodemon index.js --exec babel-node",
     "build": "babel . --out-dir build --ignore node_modules"
   },
