Updated .env.example + other package-lock stuff

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 MONGO_URL=
 PORT=
 JWT_SECRET=
+NODEMAIKER_HOST=
+NODEMAILER_PORT=
+NODEMAILER_SECURE=
+NODEMAILER_EMAIL=
+NODEMAILER_PASSWORD=
+MAILS_LOGO=
+FRONT_URL=
